# sustaina_ppo_walk_ros

./: CMakeLists.txt  Pipfile  README.md  package.xml
config/: cfgs.pkl  cfgs2.pkl  cfgs3.pkl
launch/: eval_walk.launch
scripts/: eval_walk.py
