<?xml version="1.0"?>
<package format="3">
  <name>sustaina_ppo_walk_ros</name>
  <version>0.0.0</version>
  <description>The sustaina_ppo_walk_ros package</description>
  <maintainer email="supratmanjoshua@gmail.com">jsupratman13</maintainer>
  <license>Apache 2.0</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>python3-pip</build_depend>
  <build_depend>python-is-python3</build_depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <export/>
</package>
